--- a/print.html
+++ b/print.html
@@ -162,7 +162,7 @@
 <p>- Damir Shamanaev</p>
 <h1><a class="header" href="#getting-started" id="getting-started">Getting started</a></h1>
 <blockquote>
-<p><strong>Warning:</strong> Content on this page is outdated and requires rework. Newer version of Move IDE will be published soon. For now I recommend you to use <a href="https://github.com/diem/diem/tree/main/language/tools/move-cli">move-cli</a>.</p>
+<p><strong>Warning:</strong> Content on this page is outdated and requires rework. Newer version of Move IDE will be published soon. For now I recommend you to use <a href="https://github.com/diem/move/tree/main/language/tools/move-cli">move-cli</a>.</p>
 </blockquote>
 <hr />
 <p>As with any compiled language, you need a proper set of tools to compile, run and debug your Move applications. Since this language is created for blockchains and used only within them, running scripts off-chain is a non-trivial task: every module will require an environment, account handling and compile-publishing system.</p>
@@ -1687,7 +1687,7 @@ public fun get_country_population(country: Country): u64 {
 
     // create A with inner B
     public fun create(value: u64): A {
-        A { b: B { c: C { value } } }
+        A { b: B { value } }
     }
 
     // give a mutable reference to inner B
@@ -1865,7 +1865,7 @@ Borrow::change_b(mut_b, 100000);
             )
         );
 
-        // you've already seed Debug::print&lt;T&gt; method
+        // you've already seen Debug::print&lt;T&gt; method
         // which also uses generics to print any type
         Debug::print&lt;u64&gt;(&amp;value);
     }
@@ -1882,7 +1882,7 @@ fun name&lt;T: key + store + drop + copy&gt;() {} // all 4 abilities are present
 </code></pre>
 <p>...or with structs:</p>
 <pre><code class="language-Move">struct name&lt;T: copy + drop&gt; { value: T } // T can be copied and dropped
-struct name&lt;T: stored&gt; { value: T } // T can be stored in global storage
+struct name&lt;T: store&gt; { value: T } // T can be stored in global storage
 </code></pre>
 <blockquote>
 <p>Try to remember this syntax: <code>+</code> (plus) sign may not be intuitive first time; it is the only place in Move where <code>+</code> is used in keyword list.</p>
